--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Прак ДГТУ</title>
+    <title>Парк ДГТУ</title>
     <link href="src/bootstrap-4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
       .bd-placeholder-img {
